Project working url added

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,11 +44,11 @@
     <div class="col-md-6">
         <div class="card mb-3 shadow-sm animate__animated animate__fadeInUp">
             <div class="card-body">
-                <h5 class="card-title">Portfolio Website</h5>
-                <p class="card-text">My personal portfolio built with Flask, Bootstrap, and a bit of JavaScript.</p>
-                <a href="https://github.com/yourusername/portfolio" target="_blank"
+                <h5 class="card-title">MovieBookingSite</h5>
+                <p class="card-text">CineVerse is a modern React.js movie site application with a cinematic UI/UX, where users can browse trending movies, watch trailers, view showtimes, and book tickets for their favorite movies. The app integrates with vercel.</p>
+                <a href="https://movie-booking-site-sigma.vercel.app/" target="_blank"
                    class="btn btn-outline-primary btn-sm">
-                   <i class="fa-brands fa-github"></i> View on GitHub
+                   <i class="fa-brands fa-github"></i> View on Vercel
                 </a>
             </div>
         </div>
@@ -58,11 +58,11 @@
     <div class="col-md-6">
         <div class="card mb-3 shadow-sm animate__animated animate__fadeInUp">
             <div class="card-body">
-                <h5 class="card-title">Weather App</h5>
-                <p class="card-text">A real-time weather app using Flask, OpenWeather API, and Bootstrap styling.</p>
-                <a href="https://github.com/yourusername/weather-app" target="_blank"
+                <h5 class="card-title">User Management App</h5>
+                <p class="card-text">his is a React-based User Management App that displays a list of users with their names, emails, and avatars. Users can click on any user to view a detailed profile. The app features dark mode support, smooth animations, and a responsive design.</p>
+                <a href="https://user-management-app-react-5olxbks3l-roshans-projects-93979da7.vercel.app/" target="_blank"
                    class="btn btn-outline-primary btn-sm">
-                   <i class="fa-brands fa-github"></i> View on GitHub
+                   <i class="fa-brands fa-github"></i> View on Vercel
                 </a>
             </div>
         </div>
